Major change: Started over after having serious doubts about the other. Followed way too many youtube tutorials and tried smashing them all together into one. Finally settled on one I like. some serious changes include. Having more knowledge about what href does. Knowing more about what class is for and how to use this in a .css file. Also worked out a bug where the free logo I found was not showing itself.

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -5,14 +5,51 @@
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+
+
 .header {
     width: 100%;
     height: 100vh;
-    background: #6c7fee;
+    background: #778afa;
 }
 
 .side-nav {
     width: 250px;
     height: 100%;
-    background: ;
+    background: rgb(70, 0, 128);
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 20px 30px;
+
+}
+
+.nav-links {
+    list-style: none;
+    position: relative;
+}
+
+.nav-links li {
+    padding: 10px 0;
+}
+
+.nav-links li a {
+    color: #778afa;
+    text-decoration: none;
+    padding: 10px 14px;
+}
+
+
+
+.nav-links li a p {
+    text-align: center;
+    margin-right: 50px;
+}
+
+
+.topbar {
+    width: 500px;
+    height: 300px;
+    background: rgb(70, 0, 128);
+
 }
